<resources>
    <string name="app_name">KoreanPhraseBook</string>

    <string name="categoris">Категорії</string>
    <string name="phrases">Фрази</string>
    <string name="dialogs">Діалоги</string>
    <string name="chapters">Розділи</string>
    <string name="vocabulary">Словник</string>

    <!-- menu -->
    <string name="menu_dict">Словник</string>
    <string name="menu_favourite">Улюблене</string>
    <string name="menu_chapters">Розділи</string>
    <string name="menu_dialogs">Діалоги</string>
    <string name="menu_info">Інфо</string>
    <string name="menu_phrase">Фрази</string>
    <string name="menu_dialog_replics">Репліки</string>

    <string name="search">Пошук</string>

    <!-- info -->
    <string name="settings">Налаштування</string>
    <string name="share">Поділитись додатком</string>
    <string name="rate">Написати відгук</string>
    <string name="send_email">Написати нам лист</string>
    <string name="bt_login">Логін</string>
    <string name="bt_register">Реєстрація</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Повторіть пароль</string>
    <string name="auth">Авторизація</string>
    <string name="notes_title">Мої нотатки</string>
    <string name="new_note">Нова нотатка</string>
    <string name="edit_note_title">Нотатка</string>
    <string name="about">Про додаток</string>
    <string name="about_info"> Корейський розмовник призначений насамперед для туристів, студентів та всіх хто вивчає корейську мову.\n\n
        Застосунок містить основні слова та вирази, які допоможуть вам у побутовому спілкуванні з носіями мови.\n\n
        Вивчайте алфавіт, додавайте улюблене, та робіть власні нотатки.\n\n
        У розділі Діалоги ви знайдете різні життєві ситуації, представлені у вигляді діалогів між двома співрозмовниками. Це чудовий спосіб вивчення та практикування мови....</string>
    <string name="dev_mail" translatable="false">info@keytotech.com</string>
    <string name="email_subject">Корейський розмовник</string>
    <string name="email_text"></string>
    <string name="share_title">Поділитися</string>
    <string name="email_share_title">Надіслати лист</string>
    <string name="share_error">Неможливо здійснити дію</string>

    <string name="share_text">"Korean phrase book"</string>
    <string name="alphabet_chapter_name">Алфавіт</string>

    <string name="request_error">Неможливо здійснити дію</string>

    <string name="note_title_hint">Заголовок</string>
    <string name="note_body_hint">Текст нотатки</string>

    <string name="refresh_data">Для використання повного функціоналу додатку рекомендуємо синхронізувати дані</string>
    <string name="sync_data">Синхронізувати</string>
    <string name="syncing">Синхронізація</string>
    <string name="data_dismiss_sync">Пропустити</string>
    <string name="author">Author:</string>
    <string name="message">Message:</string>
    <string name="internet_exception_title">Ойй!</string>
    <string name="internet_exception_text">Немає інтернету або доступних даних</string>
    <string name="request_error_message">Помилка завантаження даних</string>
    <string name="no_favourite_selected">У вас ще немає вибраних фраз.</string>

    <string name="search_screen_initial_message">Пошук здійснюється по фразах і словах в словнику</string>
    <string name="search_screen_empty_search">Нічого не знайдено. Пошук здійснюється по фразах і словах в словнику. Спробуйте,будь ласка, іншу фразу</string>

</resources>
